--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <h1><span class="styling">TODO</span></h1>
+    <h1><span class="styling">TODO</span>List</h1>
 
     <div class="input_div">
         <input type="text" class="input" placeholder="What Do You Want To Do...">
